plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.sooum'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
	implementation 'org.springframework.boot:spring-boot-starter-batch'

	// MySQL spatial
	implementation 'org.hibernate:hibernate-core:6.1.7.Final'
	implementation 'org.hibernate:hibernate-spatial:6.1.7.Final'

	// TSID
	implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.7.0'
	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'

	//hateoas
	implementation 'org.springframework.boot:spring-boot-starter-hateoas'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// mapStruct
	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'

	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'

	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.batch:spring-batch-test'
}

tasks.named('test') {
	useJUnitPlatform()
	systemProperty "jwt.key", project.getProperty("jwt.key")
	systemProperty "jwt.refresh.expiration", project.getProperty("jwt.refresh.expiration")
	systemProperty "jwt.access.expiration", project.getProperty("jwt.access.expiration")
	systemProperty 'spring.datasource.url', project.getProperty("spring.datasource.url")
	systemProperty 'spring.datasource.username', project.getProperty("spring.datasource.username")
	systemProperty 'spring.datasource.password', project.getProperty("spring.datasource.password")
	systemProperty 'sooum.server.ip', project.getProperty("sooum.server.ip")
	systemProperty 'sooum.server.img.path', project.getProperty("sooum.server.img.path")
	systemProperty 'spring.data.redis.port', project.getProperty("spring.data.redis.port")
	systemProperty 'spring.data.redis.host', project.getProperty("spring.data.redis.host")
}
